[package]
name = "nomarch"
version = "0.1.0"
authors = ["badtuple <the.legend@badtuple.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-rt = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
crossbeam-channel = "0.4"
uuid = "0.8.1"
chrono = "0.4.10"
